@@ -146,7 +146,7 @@ def chat_client(
     # connect to remote host
     try:
         s.connect((host, port))
-        s.send(message)
+        #s.send(message)
         # s.send(login_gprs.as_bytes())
         # s.send(gprs_event_136.as_bytes())
         # s.send(login_gprs.as_bytes())
@@ -177,9 +177,9 @@ def chat_client(
         # Get the list sockets which are readable
         ready_to_read, ready_to_write, in_error = select.select(socket_list, [], [], timeout)
 
-        if not ready_to_read and send_data:
-            for i in range(0, count):
-                s.send(login_gprs.as_bytes())
+        # if not ready_to_read and send_data:
+        #     for i in range(0, count):
+        #         s.send(login_gprs.as_bytes())
 
         for sock in ready_to_read:
             if sock == s:
@@ -221,15 +221,15 @@ def chat_client(
                     file_test(imei, s, True)
                 elif msg.rstrip() == 'sostest':
                     sos_event(imei, s)
-                if msg.rstrip() == "license":
+                elif msg.rstrip() == "license":
                     s.send(gprs_license.as_bytes())
-                if msg.rstrip() == "firmware_hb":
+                elif msg.rstrip() == "firmware_hb":
                     firmware_hb_message(imei, s)
-                if msg.rstrip() == "firmware_fc0":
+                elif msg.rstrip() == "firmware_fc0":
                     firmware_fc0_message(imei, s)
-                if msg.rstrip() == "taxi_begin":
+                elif msg.rstrip() == "taxi_begin":
                     send_gprs_message(imei, s, gprs_fare_begin)
-                if msg.rstrip() == "taxi_end":
+                elif msg.rstrip() == "taxi_end":
                     send_gprs_message(imei, s, gprs_fare_end)
                 else:
                     s.send(("%s%s" % (msg, "\r\n")).encode())
